--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
        
     </header>
 
+    <main>
+        <section class="section-about">
+            <div class="u-center-text">
+                <h2 class="heading-secondary">
+                    Refreshing tours for audacious people
+                </h2>
+            </div>
+            
+        </section>
+    </main>
+
+
+
+
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
