header tertiary and paragraph of about section done with proper typography

--- a/index.html
+++ b/index.html
@@ -34,10 +34,38 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Refreshing tours for audacious people
                 </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        You're going to love nature
+                    </h3>
+                    <p class="paragraph">
+                        lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, repellendus. Tempora unde vel omnis molestiae sit autem est quia esse mollitia pariatur, temporibus sapiente voluptatibus? Sed distinctio rerum voluptatum laborum.
+                    </p>
+
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        enjoy real thrilling tour of your life
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum illo amet rem mollitia laborum dicta necessitatibus officia libero in incidunt!
+                    </p>
+
+                    <a href="#" class="btn-text">
+                        Learn more &rarr;
+                    </a>
+                </div>
+
+                
+
+                <div class="col-1-of-2">
+                    Image Composition
+                </div>
             </div>
             
         </section>
