feature section with feature box done. used skew for section design

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="./assets/css/icon-set.css">
     <!-- main css -->
     <link rel="stylesheet" href="/assets/css/style.css">
 
@@ -71,6 +72,83 @@
             </div>
             
         </section>
+
+        <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            explore the world
+                        </h3>
+                        <p class="feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum illo amet rem mollitia laborum
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            meet nature
+                        </h3>
+                        <p class="feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum illo amet rem mollitia laborum
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            find your way
+                        </h3>
+                        <p class="feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum illo amet rem mollitia laborum
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            live a healthier life
+                        </h3>
+                        <p class="feature__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum illo amet rem mollitia laborum
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-tours">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    most popular tour
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side">
+                            text
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-1-of-3">
+                    Col 1 of 3
+                </div>
+                <div class="col-1-of-3">
+                    Col 1 of 3
+                </div>
+            </div>
+
+        </section>
+
+
     </main>
 
     
@@ -148,4 +226,4 @@
 
 
 </body>
-</html>
+</html>                  
