--- a/index.html
+++ b/index.html
@@ -130,23 +130,135 @@
             </div>
 
             <div class="row">
+                <!-- card 1 start  -->
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
-                            front
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">
+                                    the sea lover
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tours</li>
+                                    <li>up to 30 people</li>
+                                    <li>2 tour guides</li>
+                                    <li>sleep in cozy hotels</li>
+                                    <li>difficulty: Easy</li>
+                                </ul>
+                            </div>
+
                         </div>
+
                         <div class="card__side card__side--back card__side--back-1">
-                            back
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        $297
+                                    </p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book Now!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- card 1 end -->
 
+                <!-- card 2 start -->
                 <div class="col-1-of-3">
-                    Col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">
+                                    mountain hikers
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>7 day tours</li>
+                                    <li>up to 40 people</li>
+                                    <li>6 tour guides</li>
+                                    <li>sleep in provided tents</li>
+                                    <li>difficulty: Medium</li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        $497
+                                    </p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book Now!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <!-- card 2 end -->
+
+                <!-- card 3 start -->
                 <div class="col-1-of-3">
-                    Col 1 of 3
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">
+                                    the snow surfer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>5 day tours</li>
+                                    <li>up to 15 people</li>
+                                    <li>3 tour guides</li>
+                                    <li>sleep in provided tents</li>
+                                    <li>Difficulty: Hard</li>
+                                </ul>
+                            </div>
+
+                        </div>
+
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        $897
+                                    </p>
+                                </div>
+                                <a href="#" class="btn btn--white">Book Now!</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <!-- card 3 end -->
+
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn btn--green">
+                    Discover All Tours
+                </a>
             </div>
 
         </section>
