stories section with person skew card review board done.

--- a/index.html
+++ b/index.html
@@ -260,9 +260,31 @@
                     Discover All Tours
                 </a>
             </div>
-
         </section>
 
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people happy from heart
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./assets/image/about-photo1.jpg" alt="Person 1 of review" class="story__img">
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            I had the best week ever with my family
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut officia iste, quae quis veniam adipisci architecto unde eveniet modi maiores in laborum doloribus facere sed veritatis inventore natus vero velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum itaque quidem deserunt voluptas. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
