--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@
             <div class="row">
                 <div class="story">
                     <figure class="story__shape">
-                        <img src="./assets/image/about-photo1.jpg" alt="Person 1 of review" class="story__img">
+                        <img src="./assets/image/stories-photo1.jpg" alt="Person 1 of review" class="story__img">
+                        <figcaption class="story__caption">Sonali Bendre</figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">
@@ -283,6 +284,29 @@
                         </p>
                     </div>
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./assets/image/stories-photo2.jpg" alt="Person 1 of review" class="story__img">
+                        <figcaption class="story__caption">Ajay Kumar</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            My thinking just changed totally
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut officia iste, quae quis veniam adipisci architecto unde eveniet modi maiores in laborum doloribus facere sed veritatis inventore natus vero velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum itaque quidem deserunt voluptas. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">
+                    Read all stories &rarr;
+                </a>
             </div>
         </section>
 
