--- a/index.html
+++ b/index.html
@@ -263,6 +263,13 @@
         </section>
 
         <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="assets/image/stories-video1.mp4" type="video/mp4">
+                    <source src="assets/image/stories-video1.webm" type="video/webm">
+                    your browser is not supported!
+                </video>
+            </div>
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     We make people happy from heart
@@ -307,6 +314,14 @@
                 <a href="#" class="btn-text">
                     Read all stories &rarr;
                 </a>
+            </div>
+        </section>
+
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    
+                </div>
             </div>
         </section>
 
