footer section done with copyright text

--- a/index.html
+++ b/index.html
@@ -374,6 +374,33 @@
 
     </main>
 
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="/assets/image/hr-logo.svg" alt="" class="footer__logo">
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">company</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">careers</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">terms</a></li>
+                    </ul>
+                </div>    
+            </div>
+
+            <div class="col-1-of-2">
+                <div class="footer__copyright">
+                    Built by <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advance CSS and SASS</a>. Copyright &copy; by Jonas Schmedtmann.<br>
+                    Re-designed by <a href="#" class="footer__link">Hridoy Ahmed</a> for study purpose. 
+                </p>
+            </div>
+        </div>
+    </footer>
+
     
 
 
