fevicon was deleted unfortunately. uploaded again

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>TourMate | Home</title>
-    <link rel="icon" type="image/x-icon" href="assets/image/hr-fevicon.png">
+    <link rel="icon" type="image/x-icon" href="assets/image/hr-fevicon.svg">
     <meta charset="UTF-8">
     <meta name="keywords" content="HTML, CSS, SASS, Template, Tour Agency Website, Landing Page">
     <meta name="description" content="Free HTML template for tour agency with custom code">
