in booking card on back side, popup connected to book now button. functionality will be added in next commit

--- a/index.html
+++ b/index.html
@@ -424,6 +424,22 @@
         </div>
     </footer>
 
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="assets/image/stories-photo1.jpg" alt="Tour Photo" class="popup__img">
+                <img src="assets/image/stories-photo2.jpg" alt="Tour Photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; please read these terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero voluptates, repudiandae ratione voluptatibus ipsam eos officia similique reiciendis numquam vitae non iste dicta. Consequuntur enim, voluptatum eaque obcaecati excepturi ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, adipisci. Nihil facere, quo necessitatibus reprehenderit non ratione sunt nam maxime quos beatae, natus libero. Saepe, voluptatibus? Harum voluptas nostrum vitae! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus cumque nulla atque sint aperiam consectetur dolorem reprehenderit maiores dicta debitis odio inventore, saepe repellendus quisquam libero nihil laboriosam, neque expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur esse reiciendis beatae, eveniet quaerat expedita non at earum harum veritatis itaque neque dolores vitae id voluptatibus quod optio eligendi. Nulla.
+                </p>
+                <a href="#" class="btn btn--green">Book Now</a>
+            </div>
+        </div>
+    </div>
     
 
 
